# QtBasics

./: CMakeLists.txt  Main.qml  README.md  main.cpp
BonusQuestions/: AnimationOnTapped.qml  WhatHappensOnInnerTapped.qml
TestSection1/: Task_2.qml  Task_3.qml
TestSection2/: Task_2.qml  Task_3.qml  Task_4.qml  Task_5.qml  Task_7.qml
TestSection3/: Task_7.qml  Task_9.qml
TestSection4/: Qt_Controls_Demo.qml
